# test_task_cli_workmate

./: README.md  pyproject.toml
src/log_analyzer/: main.py
src/log_analyzer/reports/: __init__.py  base.py  handlers.py  slow_requests.py
src/log_analyzer/services/: aggregator.py  file_parser.py
src/log_analyzer/utils/: log_levels.py
tests/: test_handlers.py
